--- a/src/components/TodayItem.css
+++ b/src/components/TodayItem.css
@@ -21,5 +21,5 @@
 }
 
 .item-title:hover {
-	filter: drop-shadow(1px 1px 1px greenyellow)
+	color: yellow;
 }
